; ModuleID = '/home/carl/AnghaBench/freebsd/sys/geom/mirror/extr_g_mirror.c_g_mirror_free_device.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/geom/mirror/extr_g_mirror.c_g_mirror_free_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.g_mirror_softc = type { i32, i32, i32, i32 }

@M_MIRROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.g_mirror_softc*)* @g_mirror_free_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @g_mirror_free_device(%struct.g_mirror_softc* %0) #0 {
  %2 = alloca %struct.g_mirror_softc*, align 8
  store %struct.g_mirror_softc* %0, %struct.g_mirror_softc** %2, align 8
  %3 = call i32 (...) @g_topology_assert()
  %4 = load %struct.g_mirror_softc*, %struct.g_mirror_softc** %2, align 8
  %5 = getelementptr inbounds %struct.g_mirror_softc, %struct.g_mirror_softc* %4, i32 0, i32 3
  %6 = call i32 @mtx_destroy(i32* %5)
  %7 = load %struct.g_mirror_softc*, %struct.g_mirror_softc** %2, align 8
  %8 = getelementptr inbounds %struct.g_mirror_softc, %struct.g_mirror_softc* %7, i32 0, i32 2
  %9 = call i32 @mtx_destroy(i32* %8)
  %10 = load %struct.g_mirror_softc*, %struct.g_mirror_softc** %2, align 8
  %11 = getelementptr inbounds %struct.g_mirror_softc, %struct.g_mirror_softc* %10, i32 0, i32 1
  %12 = call i32 @mtx_destroy(i32* %11)
  %13 = load %struct.g_mirror_softc*, %struct.g_mirror_softc** %2, align 8
  %14 = getelementptr inbounds %struct.g_mirror_softc, %struct.g_mirror_softc* %13, i32 0, i32 0
  %15 = call i32 @sx_destroy(i32* %14)
  %16 = load %struct.g_mirror_softc*, %struct.g_mirror_softc** %2, align 8
  %17 = load i32, i32* @M_MIRROR, align 4
  %18 = call i32 @free(%struct.g_mirror_softc* %16, i32 %17)
  ret void
}

declare dso_local i32 @g_topology_assert(...) #1

declare dso_local i32 @mtx_destroy(i32*) #1

declare dso_local i32 @sx_destroy(i32*) #1

declare dso_local i32 @free(%struct.g_mirror_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
